# Anten-Muhendisligi-ve-EH

./: Architecture_Overview.md  CONTRIBUTING.md  GLOSSARY_POST_AI.md  Glossary.md  LICENSE  MASTER_INDEX.md  PREFACE.md  README.md  Roadmap.md  pyproject.toml  requirements.txt
AI_and_ML/: Cognitive_Beamforming.md  Introduction_to_AI_in_EM.md  Metasurface_Optimization.md  Optimization_Algorithms.md  Physics_Informed_Neural_Networks.md  Surrogate_Modeling.md
Applications/: Array_Synthesis.md  Bio_Electromagnetics.md  Case_Study_Cognitive_Patch.md  DF_Antennas.md  DRFM_Jamming.md  Deep_Space_Comms.md  EW_Tactics.md  Horn_Antennas.md  Jamming_Techniques.md  LPI_LPD_Signals.md  MIMO_5G_6G.md  Microstrip_Patch.md  RCS_Reduction.md  README.md  Satellite_Antennas.md
Exercises/: Level_01_04_Exercises.md  Level_05_08_Exercises.md
Hardware/: Materials_and_Manufacturing.md  SDR_Integration_Guide.md
Labs/: Level_01_Theory_Lab.py  Level_05_Array_Lab.py  Level_07_Numerical_Lab.py  README.md
Parameters/: Advanced_Metrics.md  Aperture_and_Efficiency.md  Gain_VSWR.md  Impedance_Matching.md
Production/: Design_to_Fab_Guide.md
Scripts/: AI_Optimizer_Template.py  Beamforming_Visualizer.py  CST_HFSS_Interface_Template.py  Gerber_Generator.py  Link_Budget_Calculator.py  README.md  Surrogate_Dataset_Generator.py  antenna_tools.py  jamming_calculator.py  patch_designer.py
Simulation/: Numerical_Methods.md  Python_NEC_Wrapper.py  README.md  Workflow.md
Tests/: test_antenna_math.py
Theory/: Future_of_EM.md  Maxwell.md  Metamaterials_and_RIS.md  Phasors_and_Fields.md  README.md  (+4 more)
