[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anten_eh_kulliyati"
version = "2.2.0"
authors = [
  { name="Bahattin Yunus Çetin", email="arch-yunus@example.com" },
]
description = "Post-AI Anten Mühendisliği ve Elektronik Harp Külliyatı"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/arch-yunus/Anten-Muhendisligi-ve-EH"
"Bug Tracker" = "https://github.com/arch-yunus/Anten-Muhendisligi-ve-EH/issues"
